--- a/dev/.config/git/config.ini
+++ b/dev/.config/git/config.ini
@@ -9,4 +9,4 @@ defaultbranch = main
 gpgsign = true
 
 [alias]
-graph = log --all --graph --format='%C(yellow)%h%C(reset) %s%C(auto)%d%C(reset)%n%C(dim white)%an <%ae>%C(reset)%n'
+graph = log --all --graph --format='%C(yellow)%h%C(reset) %s%C(auto)%d%C(reset)%n%C(dim white)%an <%ae> %ah%C(reset)%n'
