fix(helix): auto format python

--- a/dev/.config/helix/languages.toml
+++ b/dev/.config/helix/languages.toml
@@ -1,4 +1,8 @@
 [[language]]
+name = "python"
+auto-format = true
+
+[[language]]
 name = "javascript"
 auto-format = true
 formatter = { command = "prettier", args = ["--parser=typescript"] }
