feat(git): add undo alias

--- a/dev/.config/git/config.ini
+++ b/dev/.config/git/config.ini
@@ -15,4 +15,5 @@ rebase = true
 gpgsign = true
 
 [alias]
+undo = reset --mixed HEAD^
 graph = log --all --graph --format='%C(yellow)%h%C(reset)%C(auto)%d%C(reset) %s%n%C(dim white)%an <%ae> %ah%C(reset)%n'
