fix(git): git is not a git subcommand

--- a/dev/.config/git/config.ini
+++ b/dev/.config/git/config.ini
@@ -15,6 +15,6 @@ rebase = true
 gpgsign = true
 
 [alias]
-amend = git commit --amend
+amend = commit --amend
 undo = reset --mixed HEAD^
 graph = log --all --graph --format='%C(yellow)%h%C(reset)%C(auto)%d%C(reset) %s%n%C(dim white)%an <%ae> %ah%C(reset)%n'
