fix(helix): make completion menu more responsive

--- a/dev/.config/helix/config.toml
+++ b/dev/.config/helix/config.toml
@@ -3,6 +3,8 @@ theme = "gruvbox"
 [editor]
 line-number = "relative"
 rulers = [80, 100]
+completion-timeout = 50
+completion-trigger-len = 1
 auto-pairs = false
 
 [editor.file-picker]
