--- a/dev/.config/helix/config.toml
+++ b/dev/.config/helix/config.toml
@@ -5,6 +5,7 @@ line-number = "relative"
 rulers = [80, 100]
 completion-timeout = 50
 completion-trigger-len = 1
+auto-info = false
 auto-pairs = false
 
 [editor.file-picker]
