--- a/dev/.config/helix/config.toml
+++ b/dev/.config/helix/config.toml
@@ -2,7 +2,7 @@ theme = "gruvbox"
 
 [editor]
 line-number = "relative"
-rulers = [80, 100]
+rulers = [80]
 completion-timeout = 50
 completion-trigger-len = 1
 auto-info = false
@@ -13,6 +13,7 @@ hidden = false
 
 [editor.soft-wrap]
 enable = true
+wrap-at-text-width = true
 
 [editor.inline-diagnostics]
 cursor-line = "hint"
