--- a/os/.config/sway/config
+++ b/os/.config/sway/config
@@ -1,7 +1,7 @@
 set $mod Mod1
 set $term foot
 set $menu wmenu-run
-set $bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png
+set $bg /home/utilyre/Pictures/david-becker-Enuqv6YCoLg-unsplash.jpg
 
 input type:keyboard {
     repeat_delay 500
@@ -21,7 +21,7 @@ output * {
 
 bar {
     position top
-    status_command while date +"%a, %b %-d %H:%M"; do sleep 1; done
+    status_command while ~/.local/bin/blocks; do sleep 1; done
 }
 
 bindsym $mod+shift+r reload
@@ -61,18 +61,14 @@ bindsym $mod+shift+7 move container to workspace number 7
 bindsym $mod+shift+8 move container to workspace number 8
 bindsym $mod+shift+9 move container to workspace number 9
 
-#
-# Utilities:
-#
-# Special keys to adjust volume via PulseAudio
-bindsym --locked XF86AudioMute exec pactl set-sink-mute \@DEFAULT_SINK@ toggle
-bindsym --locked XF86AudioLowerVolume exec pactl set-sink-volume \@DEFAULT_SINK@ -5%
-bindsym --locked XF86AudioRaiseVolume exec pactl set-sink-volume \@DEFAULT_SINK@ +5%
-bindsym --locked XF86AudioMicMute exec pactl set-source-mute \@DEFAULT_SOURCE@ toggle
-# Special keys to adjust brightness via brightnessctl
-bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
-bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
+bindsym XF86AudioMute exec ~/.local/bin/ctl volume-mute
+bindsym XF86AudioLowerVolume exec ~/.local/bin/ctl volume-dn
+bindsym XF86AudioRaiseVolume exec ~/.local/bin/ctl volume-up
+# TODO: bindsym XF86AudioMicMute exec pactl set-source-mute \@DEFAULT_SOURCE@ toggle
+bindsym XF86MonBrightnessDown exec ~/.local/bin/ctl light-dn
+bindsym XF86MonBrightnessUp exec ~/.local/bin/ctl light-up
+
 # Special key to take a screenshot with grim
-bindsym Print exec grim
+# TODO: bindsym Print exec grim
 
 include /etc/sway/config.d/*
