--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -21,4 +21,4 @@ bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
 
-bind-key -n F5 send-keys -t 3 'cmake --build build && gdb -ex run ./program' Enter
+bind-key -n F5 respawn-window -kt 3
