--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -26,7 +26,6 @@ bar {
     bindsym button2 kill
 }
 
-focus_follows_mouse no
 for_window [all] floating enable
 floating_modifier $mod normal
 
@@ -46,8 +45,7 @@ bindsym print exec shoot-select
 bindsym shift+print exec shoot-screen
 bindsym alt+print exec shoot-ocr
 
-bindsym $mod+tab exec swayr next-window current-workspace
-bindsym $mod+shift+tab exec swayr prev-window current-workspace
+bindsym $mod+tab [con_mark=lru] focus
 bindsym --to-code $mod+1 workspace number 0:1
 bindsym --to-code $mod+2 workspace number 1:2
 bindsym --to-code $mod+3 workspace number 2:3
@@ -84,10 +82,10 @@ exec swayidle -w \
     timeout 600 "swaymsg 'output * power off'" resume "swaymsg 'output * power on'" \
     timeout 610 swaylock \
     before-sleep swaylock
-exec swayrd
 exec mkfifo -- "$WOB_PIPE" && tail -f -- "$WOB_PIPE" | wob
+exec sway-lru
 
 exec nm-applet
-exec foot -a btop btop
+exec foot -abtop btop
 
 include /etc/sway/config.d/*
