--- a/home/.config/environment.d/environment.conf
+++ b/home/.config/environment.d/environment.conf
@@ -11,13 +11,12 @@ BEMENU_OPTS="-iwP> --single-instance --ifne --fixed-height --scrollbar=always -H
 SSH_AUTH_SOCK="$XDG_RUNTIME_DIR/keyring/ssh"
 GNUPGHOME="$XDG_DATA_HOME/gnupg"
 WOB_PIPE="$XDG_RUNTIME_DIR/wob.fifo"
-
+ZDOTDIR="$XDG_CONFIG_HOME/zsh"
 PASSWORD_STORE_GENERATED_LENGTH=64
 PASSWORD_STORE_CHARACTER_SET="[:graph:]"
 PASSWORD_STORE_DIR="$XDG_DATA_HOME/vault"
 
-ZDOTDIR="$XDG_CONFIG_HOME/zsh"
 GIT_CONFIG_GLOBAL="$XDG_CONFIG_HOME/git/config.ini"
 DOCKER_CONFIG="$XDG_CONFIG_HOME/docker"
-
+CPM_SOURCE_CACHE="$XDG_CACHE_HOME/cpm"
 PATH="$XDG_DATA_HOME/JetBrains/Toolbox/scripts:$PATH"
