Synchronize using make

--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -21,5 +21,5 @@ bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
 
-bind-key -n F5 respawn-window -kt 3
-bind-key -n S-F5 send-keys -Rt 3 \; clear-history -Ht 3 \; respawn-window -kt 3
+bind-key -n F5 respawn-window -kt 3 sh .galinit
+bind-key -n S-F5 send-keys -Rt 3 \; clear-history -Ht 3 \; respawn-window -kt 3 sh .galinit
