Synchronize using make

--- a/home/.config/mpv/mpv.conf
+++ b/home/.config/mpv/mpv.conf
@@ -3,4 +3,5 @@ window-dragging=no
 keep-open=yes
 osd-on-seek=msg-bar
 player-operation-mode=pseudo-gui
+save-position-on-quit=yes
 ytdl-format=bestvideo[height<=?1080]+bestaudio/best
