Synchronize using make

--- a/home/.config/git/config.ini
+++ b/home/.config/git/config.ini
@@ -20,4 +20,4 @@ gpgsign = true
 [alias]
 amend = commit --amend
 review = diff --cached
-graph = log --all --graph --format='%C(yellow)%h%C(reset)%C(auto)%d%C(reset) %s%n%C(dim white)%an <%ae> %ah%C(reset)%n'
+graph = log --graph --format='%C(yellow)%h%C(reset)%C(auto)%d%C(reset) %s%n%C(dim white)%an <%ae> %ah%C(reset)%n'
