--- a/home/.config/helix/config.toml
+++ b/home/.config/helix/config.toml
@@ -1,12 +1,11 @@
 theme = "gruvbox_dark_hard"
 
 [editor]
-rulers = [100]
 continue-comments = false
-# idle-timeout = 800 # https://github.com/helix-editor/helix/discussions/8196#discussioncomment-9050882
-completion-timeout = 5
 completion-trigger-len = 1
-cursorline = true
+completion-timeout = 5
+rulers = [80, 100]
+# idle-timeout = 800 # https://github.com/helix-editor/helix/discussions/8196#discussioncomment-9050882
 
 [editor.cursor-shape]
 insert = "bar"
@@ -37,20 +36,20 @@ right = [
   "position",
 ]
 
-# [editor.indent-guides]
-# render = true
-
 [editor.file-picker]
 hidden = false
-
-[editor.soft-wrap]
-enable = true
 
 [editor.inline-diagnostics]
 cursor-line = "hint"
 
-[editor.lsp]
-display-inlay-hints = true
+[editor.soft-wrap]
+enable = true
+
+# [editor.indent-guides]
+# render = true
+
+# [editor.lsp]
+# display-inlay-hints = true
 
 [keys.normal]
 "{" = "goto_prev_paragraph"
