--- a/home/.config/lazygit/config.yml
+++ b/home/.config/lazygit/config.yml
@@ -12,3 +12,5 @@ gui:
   showNumstatInFilesView: true
   showCommandLog: false
   border: single
+  showPanelJumps: false
+  statusPanelView: allBranchesLog
