--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -1,4 +1,4 @@
-set-option -ga terminal-features *:rgb,*:usstyle,*:hyperlinks
+set-option -ga terminal-features *:rgb,*:usstyle
 set-option -g copy-command wl-copy
 set-option -g focus-events on
 set-option -g escape-time 0
