--- a/home/.config/environment.d/environment.conf
+++ b/home/.config/environment.d/environment.conf
@@ -7,14 +7,15 @@ PATH="$HOME/.local/bin:$PATH"
 EDITOR=hx
 GROFF_NO_SGR=1
 BEMENU_OPTS="-iwP> --single-instance --ifne --fixed-height --scrollbar=always -H26 --cw=2 --ch=18"
+PASSWORD_STORE_GENERATED_LENGTH=64
+PASSWORD_STORE_CHARACTER_SET="[:graph:]"
 
 SSH_AUTH_SOCK="$XDG_RUNTIME_DIR/keyring/ssh"
 GNUPGHOME="$XDG_DATA_HOME/gnupg"
 WOB_PIPE="$XDG_RUNTIME_DIR/wob.fifo"
 ZDOTDIR="$XDG_CONFIG_HOME/zsh"
-PASSWORD_STORE_GENERATED_LENGTH=64
-PASSWORD_STORE_CHARACTER_SET="[:graph:]"
 PASSWORD_STORE_DIR="$XDG_DATA_HOME/vault"
+LF_CACHE="$XDG_CACHE_HOME/lf"
 
 GIT_CONFIG_GLOBAL="$XDG_CONFIG_HOME/git/config.ini"
 DOCKER_CONFIG="$XDG_CONFIG_HOME/docker"
