Synchronize using make

--- a/home/.config/environment.d/environment.conf
+++ b/home/.config/environment.d/environment.conf
@@ -6,9 +6,9 @@ PATH="$HOME/.local/bin:$PATH"
 
 EDITOR=hx
 GROFF_NO_SGR=1
-BEMENU_OPTS="-iwP> --single-instance --ifne --fixed-height --scrollbar=always -H26 --cw=2 --ch=18"
+BEMENU_OPTS='-iwP> --single-instance --ifne --fixed-height --scrollbar=always -H26 --cw=2 --ch=18'
 PASSWORD_STORE_GENERATED_LENGTH=64
-PASSWORD_STORE_CHARACTER_SET="[:graph:]"
+PASSWORD_STORE_CHARACTER_SET='[:graph:]'
 
 SSH_AUTH_SOCK="$XDG_RUNTIME_DIR/keyring/ssh"
 GNUPGHOME="$XDG_DATA_HOME/gnupg"
