Synchronize using make

--- a/home/.config/foot/foot.ini
+++ b/home/.config/foot/foot.ini
@@ -1,5 +1,10 @@
-[main]
 font=monospace:size=11
+box-drawings-uses-font-glyphs=yes
+resize-by-cells=no
 
 [cursor]
 color=242424 e6e6e6
+beam-thickness=1
+
+[mouse]
+hide-when-typing=yes
