--- a/home/.config/helix/config.toml
+++ b/home/.config/helix/config.toml
@@ -46,8 +46,8 @@ cursor-line = "hint"
 [editor.soft-wrap]
 enable = true
 
-# [editor.indent-guides]
-# render = true
+[editor.indent-guides]
+render = true
 
 # [editor.lsp]
 # display-inlay-hints = true
