--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -42,7 +42,10 @@ bindsym print exec shoot-select
 bindsym shift+print exec shoot-screen
 bindsym alt+print exec shoot-scan
 
-bindsym $mod+tab [con_mark=LRU] focus
+bindsym --to-code $mod+w focus up
+bindsym --to-code $mod+a focus left
+bindsym --to-code $mod+s focus down
+bindsym --to-code $mod+d focus right
 bindsym --to-code $mod+1 workspace number 0:1
 bindsym --to-code $mod+2 workspace number 1:2
 bindsym --to-code $mod+3 workspace number 2:3
@@ -80,7 +83,6 @@ exec swayidle -w \
     timeout 610 swaylock \
     before-sleep swaylock
 exec mkfifo -- "$WOB_PIPE" && tail -f -- "$WOB_PIPE" | wob
-exec sway-lru
 exec swaynag-battery
 exec nm-applet
 
