--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -84,22 +84,21 @@ exec swayidle -w \
     before-sleep swaylock
 exec swaynag-battery
 exec mkfifo -- "$WOB_PIPE" && tail -f -- "$WOB_PIPE" | wob
-exec wluma
 exec nm-applet
 
-assign [app_id=lf]                         workspace 6:7
-assign [app_id=com.discordapp.Discord]     workspace 7:8
-assign [app_id=chromium-browser]           workspace 8:9
-assign [app_id=btop]                       workspace 9:0
-for_window [app_id=lf]                     floating disable
-for_window [app_id=com.discordapp.Discord] floating disable
-for_window [app_id=chromium-browser]       floating disable
-for_window [app_id=btop]                   floating disable
+# assign [app_id=lf]                         workspace 6:7
+# assign [app_id=com.discordapp.Discord]     workspace 7:8
+# assign [app_id=chromium-browser]           workspace 8:9
+# assign [app_id=btop]                       workspace 9:0
+# for_window [app_id=lf]                     floating disable
+# for_window [app_id=com.discordapp.Discord] floating disable
+# for_window [app_id=chromium-browser]       floating disable
+# for_window [app_id=btop]                   floating disable
 
-exec foot -alf lf
-exec foot -alf lf
+# exec foot -alf lf
+# exec foot -alf lf
 # exec discord
-exec chromium-browser
-exec foot -abtop btop
+# exec chromium-browser
+# exec foot -abtop btop
 
 include /etc/sway/config.d/*
