Synchronize using make

--- a/home/.config/foot/foot.ini
+++ b/home/.config/foot/foot.ini
@@ -4,7 +4,9 @@ resize-by-cells=no
 
 [cursor]
 beam-thickness=1
-color=242424 e6e6e6
 
 [mouse]
 hide-when-typing=yes
+
+[colors]
+cursor=242424 e6e6e6
