--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -11,7 +11,7 @@ input type:touchpad {
     dwt disabled
     tap enabled
     natural_scroll enabled
-    middle_emulation enabled
+    drag_lock enabed
 }
 
 seat seat0 xcursor_theme macOS 24
@@ -91,7 +91,7 @@ assign [app_id=btop] workspace 9:0
 
 exec foot -alf lf
 exec foot -alf lf
-exec discord
+# exec discord
 exec chromium
 exec foot -abtop btop
 
