--- a/home/.config/helix/config.toml
+++ b/home/.config/helix/config.toml
@@ -50,6 +50,9 @@ enable = true
 [editor.indent-guides]
 render = true
 
+[editor.smart-tab]
+enable = false
+
 # [editor.lsp]
 # display-inlay-hints = true
 
