--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -8,7 +8,7 @@ input type:keyboard {
     xkb_layout us,ir,gr
 }
 input type:touchpad {
-    dwt disabled
+    # dwt disabled
     tap enabled
     natural_scroll enabled
     drag_lock enabed
@@ -17,7 +17,6 @@ input type:touchpad {
 seat seat0 xcursor_theme macOS 24
 bar {
     modifier $mod
-    position top
     strip_workspace_numbers yes
     status_padding 4
     tray_padding 4
