Synchronize using make

--- a/home/.config/mpv/input.conf
+++ b/home/.config/mpv/input.conf
@@ -21,6 +21,7 @@ up add volume +5
 
 c cycle sub-visibility
 C cycle sub
+: script-binding select/menu
 
 w no-osd add video-pan-y +0.01
 a no-osd add video-pan-x +0.01
